Fixed menu and buttons on the side
The buttons were not vertical centered

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <div class="menu menuOut" id="menu">
+        <div class="menu menuIn" id="menu">
             <button class="menuButton menuButtonActive" onclick="//changeToggleThemes()"><span class="material-icons">home</span><p>Home</p></button>
             <button class="menuButton" onclick="//changeToggleThemes()"><span class="material-icons">color_lens</span><p>Theme</p></button>
             <button class="menuButton" onclick="//changeToggleThemes()"><span class="material-icons">language</span><p>Language</p></button>
