--- a/index.html
+++ b/index.html
@@ -40,33 +40,38 @@
             <button class="menuButton" onclick="//changeToggleThemes()"><span class="material-icons">all_inclusive</span><p>Watch</p></button>
         </div>
 
-        <div id="video">
-            <video settings src=""></video>
-        </div>
+        <div class="outerWrapper">
 
-        <div id="chat">
-            <div id="selectionChat"></div>
-            <div id="chatPanel">
-                <p>1</p>
-                <p>2</p>
-                <p>3</p>
-                <p>4</p>
-                <p>5</p>
-                <p>6</p>
-                <p>7</p>
-                <p>8</p>
-                <p>9</p>
-                <p>11</p>
-                <p>12</p>
-                <p>13</p>
-                <p>14</p>
-                <p>15</p>
-                <p>16</p>
-                <p>17</p>
-                <p>18</p>
-                <p>19</p>
-                <p>20</p>
-                <p>21</p>
+            <div class="wrapper">
+                <div id="video">
+                    <video settings src=""></video>
+                </div>
+
+                <div id="chat">
+                    <div id="selectionChat"></div>
+                    <div id="chatPanel">
+                        <p>1</p>
+                        <p>2</p>
+                        <p>3</p>
+                        <p>4</p>
+                        <p>5</p>
+                        <p>6</p>
+                        <p>7</p>
+                        <p>8</p>
+                        <p>9</p>
+                        <p>11</p>
+                        <p>12</p>
+                        <p>13</p>
+                        <p>14</p>
+                        <p>15</p>
+                        <p>16</p>
+                        <p>17</p>
+                        <p>18</p>
+                        <p>19</p>
+                        <p>20</p>
+                        <p>21</p>
+                    </div>
+                </div>
             </div>
         </div>
 
