--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
                 </div>
 
                 <div id="chat">
-                    <div id="selectionChat"></div>
-                    <div id="chatPanel">
+                    <div id="chat-header">
+                        <select id="dropdown-select">
+                            <option value="actual value 1">Display Text 1</option>
+                            <option value="actual value 2">Display Text 2</option>
+                            <option value="actual value 3">Display Text 3</option>
+                        </select>
+                    </div>
+                    <div id="chat-panel">
                         <p>1</p>
                         <p>2</p>
                         <p>3</p>
@@ -71,31 +77,44 @@
                         <p>20</p>
                         <p>21</p>
                     </div>
+                    <div id="chat-queue">
+                        <p>14</p>
+                        <p>15</p>
+                        <p>16</p>
+                        <p>17</p>
+                        <p>18</p>
+                        <p>19</p>
+                        <p>20</p>
+                        <p>21</p>
+                    </div>
+                    <div id="chat-footer">
+                        <div id="smol-line"></div>
+                        <button id="chat-hide">hide chat</button>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div id="language">
-            <button class="btnDesign" id="openAdd">German</button>
-            <button class="btnDesign" id="openAdd">English</button>
-        </div>
+            <div id="language">
+                <button class="btnDesign" id="openAdd">German</button>
+                <button class="btnDesign" id="openAdd">English</button>
+            </div>
 
-        <div id="invite">
-            <span class="material-icons"> person_add_alt_1 </span>
-            <p id="InvitationLink">https://www.youtube.com</p>
-            <button onclick="copyToClipboard($('#InvitationLink').text())" id="copyInviteLink">Copy Link</button>
-        </div>
-        <div id="themes">
-            <button onclick="//defaultColor()" class="btnDesign">Default</button>
-            <button class="btnDesign">Dark Orange</button>
-            <button class="btnDesign">Youtube</button>
-            <!-- <input oninput="changeBackgound($('#colorPicker').val())" type="color" name="" id="colorPicker"> -->
-        </div>
+            <div id="invite">
+                <span class="material-icons"> person_add_alt_1 </span>
+                <p id="InvitationLink">https://www.youtube.com</p>
+                <button onclick="copyToClipboard($('#InvitationLink').text())" id="copyInviteLink">Copy Link</button>
+            </div>
+            <div id="themes">
+                <button onclick="//defaultColor()" class="btnDesign">Default</button>
+                <button class="btnDesign">Dark Orange</button>
+                <button class="btnDesign">Youtube</button>
+                <!-- <input oninput="changeBackgound($('#colorPicker').val())" type="color" name="" id="colorPicker"> -->
+            </div>
 
-        <div id="addToQueue">
-            <input id="queueLink" type="text">
-            <button onclick="addSong()" class="btnDesign">Add Song to Queue</button>
-        </div>
+            <div id="addToQueue">
+                <input id="queueLink" type="text">
+                <button onclick="addSong()" class="btnDesign">Add Song to Queue</button>
+            </div>
     </main>
 
     <footer>
