--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                 <div id="chat">
                     <div id="chat-header">
                         <select id="dropdown-select">
-                            <option value="actual value 1">Display Text 1</option>
-                            <option value="actual value 2">Display Text 2</option>
-                            <option value="actual value 3">Display Text 3</option>
+                            <option value="actual value 1">Chat</option>
+                            <option value="actual value 2">Queue</option>
                         </select>
                     </div>
                     <div id="chat-panel">
@@ -88,6 +87,7 @@
                         <p>21</p>
                     </div>
                     <div id="chat-footer">
+                        <input id="message" placeholder="say something" type="textarea">
                         <div id="smol-line"></div>
                         <button id="chat-hide">hide chat</button>
                     </div>
